# motor-control-ros2

./: CMakeLists.txt  encoder.c  motor.c  node.c
Pico_codes/: encoder.py  encoder_buggy_coder.py  motor.py  motor_node.py
Pico_codes/encoder_counter/: CMakeLists.txt  main.c
Pico_codes/motor_test/: motor.c
Pico_codes/serial_test/: CMakeLists.txt  blink_led.c  encoder.c  listener  listener.cpp  main.c  main2.c  motor.c  pico_comm.hpp  pico_comm2.hpp  pico_main  pico_main.cpp  talker  talker.cpp  talker.py
Pico_codes/serial_test/examples/: blink_led.c  listener  listener.cpp  motor.c  pico_serial_test.py  talker.cpp
pico_serial/: CMakeLists.txt  main2 copy.c  main2.c  pico_comm2 copy.hpp  pico_comm2.hpp  pico_main  pico_main.cpp
pico_serial/quadrature/: quadrature.pio.h
